--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -5,8 +5,8 @@ known
 
 version	0.16.8 (21/04/2014)
 fix
-	Bug introduit en 0.16.7 : Dans l'édition une sous-opération, une erreur survenait lorsqu'on effaçait le montant puis qu'on choisissait un libellé dans le menu déroulant.  
-	Contournement d'un bug de java 8 bug qui causait un plantage de Yapbam après sa fermeture sur certains système Linux.
+	Bug introduit en 0.16.7 : Dans l'édition d'une sous-opération, une erreur survenait lorsqu'on effaçait le montant puis qu'on choisissait un libellé dans le menu déroulant.  
+	Contournement d'un bug de java 8 qui causait un plantage de Yapbam après sa fermeture sur certains systèmes Linux.
 	La couleur de sélection de la table des opérations de l'onglet "Historique du solde" était incorrecte quand cette table utilisait les couleurs de fond de l'onglet "Opérations".
 	Parfois, quand les préférences d'apparence étaient changées, le graphique d'historique du solde était erroné et Yapbam devenait très lent. 
 improvement
