--- a/src/localization/relnotes.txt
+++ b/src/localization/relnotes.txt
@@ -6,12 +6,13 @@ known
 version	0.16.8 (04/21/2014)
 fix
 	In the subtransaction editing dialog, an error occurred when you selected a predefined description after having the amount cleared.
-	Workaround to a java 8 bug that caused Yapbam hangs after closing on some Linux systems.
+	Workaround to a java 8 bug that caused Yapbam to hang after closing on some Linux systems.
 	The selection color of transactions table in the "History of balance" tab was wrong when this table used same background colors as the "Operations" tab.
 	Sometimes when appearance preferences were changed, the balance history chart was wrong and Yapbam became very slow.
 improvement
 	The transactions table of the "Balance history" tab can now display expenses and receipts in separate columns.
 	The setting that allow to separate receipt/expense columns in the "Transactions" tab is reused in the periodical transactions table of the "Administration" tab.
+
 version	0.16.7 (04/06/2014)
 fix
 	The "undefined" category was ignored when selected in the custom filter dialog.
