--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1251,3 +1251,22 @@ BalanceHistory.zoom=Zoom:
 Archive.warning.notAnArchiveFile=Die ausgewählte Datei ist nicht ein Archivdaten (Es ist ein Standard-Datendatei).
 
 ImportDialog.badSeparator=Dieser Separator ist nicht erlaubt
+
+ExportDialog.decimalSeparator=Séparateur de décimales
+ExportDialog.decimalSeparator.customized=Personnalisé :
+ExportDialog.decimalSeparator.customized.toolTip=Choisissez cette option pour entrer un séparateur de décimales personnalisé ci-contre
+ExportDialog.decimalSeparator.customizedChar.toolTip=Tapez le séparateur de décimales personnalisé ici
+ExportDialog.decimalSeparator.defaultSeparator=Séparateur par défaut ({0})
+ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le séparateur de décimales par d?faut
+ImportDialog.ignoreFirstLine=Ignorer les premières lignes du fichier. Nombre de lignes :
+ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer les premiéres lignes du fichier (si, par exemple, ce sont des lignes d'en-tête)
+
+TransactionEditingPreferencesPanel.wizard.title=Lorsque je choisis un libellé prédéfini :
+TransactionEditingPreferencesPanel.wizard.ifNull=Remplir le montant s'il est nul
+TransactionEditingPreferencesPanel.wizard.never=Ne jamais remplir le montant
+TransactionEditingPreferencesPanel.wizard.always=Toujours remplir le montant
+TransactionEditingPreferencesPanel.wizard.with=avec
+TransactionEditingPreferencesPanel.wizard.last=La dernière valeur
+TransactionEditingPreferencesPanel.wizard.last.tooltip=Sélectionner cette option pour réutiliser le montant de la dernière opération avec ce libellé 
+TransactionEditingPreferencesPanel.wizard.mostProbable=Le montant le plus probable
+TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Sélectionner cette option pour utiliser le montant le plus utilisé lors des derniers mois par les opérations avec le libellé sélectionné
