--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1262,3 +1262,22 @@ BalanceHistory.zoom=Zoom:
 Archive.warning.notAnArchiveFile=O arquivo selecionado não é um arquivo de dados (é um arquivo de dados padrão).
 
 ImportDialog.badSeparator=Este separador não é permitido
+
+ExportDialog.decimalSeparator=Decimal separator
+ExportDialog.decimalSeparator.customized=Customized:
+ExportDialog.decimalSeparator.customized.toolTip=Select this option to specify a decimal separator of your choice
+ExportDialog.decimalSeparator.customizedChar.toolTip=Enter the preferred separator
+ExportDialog.decimalSeparator.defaultSeparator=Default ({0}
+ExportDialog.decimalSeparator.defaultSeparator.toolTip=Select this option to use the default separator
+ImportDialog.ignoreFirstLine=Ignore first line(s). Number of lines:
+ImportDialog.ignoreFirstLine.toolTip=If the first line(s) of the file is a header, check this box to ignore the header
+
+TransactionEditingPreferencesPanel.wizard.title=When I select a predefined description:
+TransactionEditingPreferencesPanel.wizard.ifNull=Fill the amount if it is not null
+TransactionEditingPreferencesPanel.wizard.never=Never fill the amount
+TransactionEditingPreferencesPanel.wizard.always=Always fill the amount
+TransactionEditingPreferencesPanel.wizard.with=with
+TransactionEditingPreferencesPanel.wizard.last=Last value
+TransactionEditingPreferencesPanel.wizard.last.tooltip=Select this option to reuse the amount of last transaction with the selected description 
+TransactionEditingPreferencesPanel.wizard.mostProbable=Most probable amount
+TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Select this option to use the most used amount with the selected description during last months
