--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -7,6 +7,8 @@ version	0.17.0 (01/05/2014)
 improvement
 	Il est à présent possible de choisir le séparateur des décimales dans l'import. Les montants précédés d'un + sont à présent acceptés.
 	Le compte sélectionné par défaut dans l'onglet "Relevés de compte" est à présent celui sélectionné dans le filtre.
+fix
+	Sous le thème Swing, la couleur de fond de la colonne "Lié à" du dialogue d'import était incorrecte.
 
 version	0.16.10 (25/04/2014)
 fix
