--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -1253,7 +1253,7 @@ ExportDialog.decimalSeparator.customized=Personnalisé :
 ExportDialog.decimalSeparator.customized.toolTip=Choisissez cette option pour entrer un séparateur de décimales personnalisé ci-contre
 ExportDialog.decimalSeparator.customizedChar.toolTip=Tapez le séparateur de décimales personnalisé ici
 ExportDialog.decimalSeparator.defaultSeparator=Séparateur par défaut ({0})
-ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le séparateur de décimales par d?faut
+ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le séparateur de décimales par défaut
 ImportDialog.ignoreFirstLine=Ignorer les premières lignes du fichier. Nombre de lignes :
 ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer les premiéres lignes du fichier (si, par exemple, ce sont des lignes d'en-tête)
 
