--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1252,14 +1252,14 @@ Archive.warning.notAnArchiveFile=Die ausgewählte Datei ist nicht ein Archivdaten
 
 ImportDialog.badSeparator=Dieser Separator ist nicht erlaubt
 
-ExportDialog.decimalSeparator=Séparateur de décimales
-ExportDialog.decimalSeparator.customized=Personnalisé :
-ExportDialog.decimalSeparator.customized.toolTip=Choisissez cette option pour entrer un séparateur de décimales personnalisé ci-contre
-ExportDialog.decimalSeparator.customizedChar.toolTip=Tapez le séparateur de décimales personnalisé ici
-ExportDialog.decimalSeparator.defaultSeparator=Séparateur par défaut ({0})
-ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le séparateur de décimales par d?faut
-ImportDialog.ignoreFirstLine=Ignorer les premières lignes du fichier. Nombre de lignes :
-ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer les premiéres lignes du fichier (si, par exemple, ce sont des lignes d'en-tête)
+ExportDialog.decimalSeparator=Dezimaltrennzeichen
+ExportDialog.decimalSeparator.customized.toolTip=Wählen Sie diese Option, um eine benutzerdefinierte Dezimaltrennzeichen oben gegen eingeben
+ExportDialog.decimalSeparator.customizedChar.toolTip=Geben Sie die benutzerdefinierte Dezimaltrennzeichen hier
+ExportDialog.decimalSeparator.defaultSeparator=Standard ({0})
+ExportDialog.decimalSeparator.defaultSeparator.toolTip=Wählen Sie diese Option, um die Standard Dezimaltrennzeichen verwenden
+ImportDialog.ignoreFirstLine=Ignorieren Sie die erste Zeile der Datei. Anzahl der Zeilen:
+ImportDialog.ignoreFirstLine.toolTip=Markieren Sie dieses Feld, um die erste Zeile der Datei überspringen (wenn, zum Beispiel, sind diese Linien header)
+ImportDialog.lineNumber.toolTip=Dieses Feld enthält die Zeilennummer der importierten Datei verwendet, um die Spalte oben zu füllen
 
 TransactionEditingPreferencesPanel.wizard.title=Lorsque je choisis un libellé prédéfini :
 TransactionEditingPreferencesPanel.wizard.ifNull=Remplir le montant s'il est nul
