--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1249,13 +1249,13 @@ Archive.warning.notAnArchiveFile=Le fichier sélectionné n'est pas une archive de
 ImportDialog.badSeparator=Ce séparateur n'est pas autorisé
 
 ExportDialog.decimalSeparator=Séparateur de décimales
-ExportDialog.decimalSeparator.customized=Personnalisé :
 ExportDialog.decimalSeparator.customized.toolTip=Choisissez cette option pour entrer un séparateur de décimales personnalisé ci-contre
 ExportDialog.decimalSeparator.customizedChar.toolTip=Tapez le séparateur de décimales personnalisé ici
-ExportDialog.decimalSeparator.defaultSeparator=Séparateur par défaut ({0})
+ExportDialog.decimal.defaultSeparator=Séparateur par défaut ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Choisissez cette option pour utiliser le séparateur de décimales par défaut
 ImportDialog.ignoreFirstLine=Ignorer les premières lignes du fichier. Nombre de lignes :
 ImportDialog.ignoreFirstLine.toolTip=Cochez cette case pour ignorer les premiéres lignes du fichier (si, par exemple, ce sont des lignes d'en-tête)
+ImportDialog.lineNumber.toolTip=<html>Ce champ contient le numéro de la ligne du fichier importé utilisée pour remplir la colonne <b>"{0}"</b> ci-dessus</html>
 
 TransactionEditingPreferencesPanel.wizard.title=Lorsque je choisis un libellé prédéfini :
 TransactionEditingPreferencesPanel.wizard.ifNull=Remplir le montant s'il est nul
