--- a/src/Resources_pt.properties
+++ b/src/Resources_pt.properties
@@ -1264,13 +1264,13 @@ Archive.warning.notAnArchiveFile=O arquivo selecionado não é um arquivo de dados
 ImportDialog.badSeparator=Este separador não é permitido
 
 ExportDialog.decimalSeparator=Decimal separator
-ExportDialog.decimalSeparator.customized=Customized:
 ExportDialog.decimalSeparator.customized.toolTip=Select this option to specify a decimal separator of your choice
 ExportDialog.decimalSeparator.customizedChar.toolTip=Enter the preferred separator
-ExportDialog.decimalSeparator.defaultSeparator=Default ({0}
+ExportDialog.decimalSeparator.defaultSeparator=Default ({0})
 ExportDialog.decimalSeparator.defaultSeparator.toolTip=Select this option to use the default separator
 ImportDialog.ignoreFirstLine=Ignore first line(s). Number of lines:
 ImportDialog.ignoreFirstLine.toolTip=If the first line(s) of the file is a header, check this box to ignore the header
+ImportDialog.lineNumber.toolTip=<html>This field contains the number of the line used to populate the <b>"{0}"</b> column above</html>
 
 TransactionEditingPreferencesPanel.wizard.title=When I select a predefined description:
 TransactionEditingPreferencesPanel.wizard.ifNull=Fill the amount if it is not null
