--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -1261,12 +1261,12 @@ ImportDialog.ignoreFirstLine=Ignorieren Sie die erste Zeile der Datei. Anzahl de
 ImportDialog.ignoreFirstLine.toolTip=Markieren Sie dieses Feld, um die erste Zeile der Datei überspringen (wenn, zum Beispiel, sind diese Linien header)
 ImportDialog.lineNumber.toolTip=Dieses Feld enthält die Zeilennummer der importierten Datei verwendet, um die Spalte oben zu füllen
 
-TransactionEditingPreferencesPanel.wizard.title=Lorsque je choisis un libellé prédéfini :
-TransactionEditingPreferencesPanel.wizard.ifNull=Remplir le montant s'il est nul
-TransactionEditingPreferencesPanel.wizard.never=Ne jamais remplir le montant
-TransactionEditingPreferencesPanel.wizard.always=Toujours remplir le montant
-TransactionEditingPreferencesPanel.wizard.with=avec
-TransactionEditingPreferencesPanel.wizard.last=La dernière valeur
-TransactionEditingPreferencesPanel.wizard.last.tooltip=Sélectionner cette option pour réutiliser le montant de la dernière opération avec ce libellé 
-TransactionEditingPreferencesPanel.wizard.mostProbable=Le montant le plus probable
-TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Sélectionner cette option pour utiliser le montant le plus utilisé lors des derniers mois par les opérations avec le libellé sélectionné
+TransactionEditingPreferencesPanel.wizard.title=Wenn ich wählen Sie eine vordefinierte Beschreibung, Füllen Sie den Betrag:
+TransactionEditingPreferencesPanel.wizard.ifNull=Wenn er Null
+TransactionEditingPreferencesPanel.wizard.never=Nie
+TransactionEditingPreferencesPanel.wizard.always=Immer
+TransactionEditingPreferencesPanel.wizard.with=Verwenden
+TransactionEditingPreferencesPanel.wizard.last=Letzter Wert
+TransactionEditingPreferencesPanel.wizard.last.tooltip=Wählen Sie diese Option, um die Betrag der letzten Transaktion mit der gewählten Beschreibung wiederverwenden
+TransactionEditingPreferencesPanel.wizard.mostProbable=Die wahrscheinlichste Betrag
+TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Wählen Sie diese Option, um die am meisten verwendete Menge mit der gewählten Bezeichnung in den letzten Monaten zu verwenden 
