--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -1053,11 +1053,11 @@ Subcategories.groupButton.tooltip=Marque esta caixa para subcategorias de grupo 
 Subcategories.separatorField.title=Subcategorias separador:
 Subcategories.separatorField.tooltip=<html>Pode-se definir subcategorias, separando o nome da categoria que a subcategoria com o carácter definido neste campo.<br><b>exemplo:</b> Imposto<u>/</u>renda e impostos<u>/</u>locais com separador <u>'/'</u> definido subcategorias "renda" e "local" da categoria "Impostos"</html>
 
-#0.12 version introduces the ability to store data in the Cloud, the following wording are related to this functionnality
+#0.12 version introduces the ability to store data in the Cloud, the following wording are related to this functionality
 #Persistence is achieve by plugins, the following error message is send when a plugin is not found
-persitencePlugin.load.error=Unable to load the persistence plugin {0}.
+persitencePlugin.load.error=Incapaz de carregar o plugin persistente {0}.
 #A tip (in the welcome screen) that presents the Cloud functionnality
-Tip.10=<html>Access your data from any computer.<hr style="width:40%">In save dialog, the <b>Dropbox</b> tab allows you to save data to your Dropbox account and then access it from any computer connected to the Internet.<br><br>To do this, you will need just a Dropbox account available here: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
+Tip.10=<html>Acesse seus dados de qualquer computador.<hr style="width:40%">Na caixa de salvar, <b>Dropbox</b> esta aba permite salvar dados da sua conta do Dropbox and depois acessar os mesmos de qualquer computador conectado na internet.<br><br> Para fazer isso, você precisa de uma conta do Dropbox disponível no endereço: <a href="http://www.dropbox.com">http://www.dropbox.com</a></html>
 
 #Wordings related to general synchronization process
 synchronization.synchronizing=Sincronizando ...
@@ -1253,7 +1253,7 @@ BalanceHistory.prefs.highlightAlerts=Alerta de Destaque
 BalanceHistory.prefs.highlightAlerts.tooltip=Selecione essa caixa para destacar as linhas que ativam os balanços de alerta
 BalanceHistory.prefs.sameBackgroundAsTransactionTable=<html>O mesmo fundo da tela que as "<b>{0}</b>" abas</html>
 BalanceHistory.prefs.sameBackgroundAsTransactionTable.tooltip=<html>Selecione essa caixa para usar o mesma cor de fundo da tela como a da "<b>{0}</b>" aba</html>
-BalanceHistory.prefs.title=Através dessa aba, você pode configurar o que mostrar na historia da tabela de balanços.
+BalanceHistory.prefs.title=Através dessa aba, você pode configurar o que mostrar na história da tabela de balanços.
 BalanceHistory.zoom=Zoom:
 
 #-------------------------------------------------------
@@ -1264,20 +1264,24 @@ Archive.warning.notAnArchiveFile=O arquivo selecionado não é um arquivo de dados
 ImportDialog.badSeparator=Este separador não é permitido
 
 ExportDialog.decimalSeparator=Decimal separator
-ExportDialog.decimalSeparator.customized.toolTip=Select this option to specify a decimal separator of your choice
-ExportDialog.decimalSeparator.customizedChar.toolTip=Enter the preferred separator
-ExportDialog.decimalSeparator.defaultSeparator=Default ({0})
-ExportDialog.decimalSeparator.defaultSeparator.toolTip=Select this option to use the default separator
-ImportDialog.ignoreFirstLine=Ignore first line(s). Number of lines:
-ImportDialog.ignoreFirstLine.toolTip=If the first line(s) of the file is a header, check this box to ignore the header
-ImportDialog.lineNumber.toolTip=<html>This field contains the number of the line used to populate the <b>"{0}"</b> column above</html>
+ExportDialog.decimalSeparator.customized.toolTip= Selecione esta opção para especificar um separador decimal de sua escolha
+ExportDialog.decimalSeparator.customizedChar.toolTip=Tecle o separador preferido
+ExportDialog.decimalSeparator.defaultSeparator=Padrão ({0})
+ExportDialog.decimalSeparator.defaultSeparator.toolTip=Selecione esta opção para usar o separador padrão
+ImportDialog.ignoreFirstLine=Ignore estas linha(s). Número de linhas:
+ImportDialog.ignoreFirstLine.toolTip=Se a primeira linha (s) do arquivo é um header, selecione este aqui para ignorar o header
+ImportDialog.lineNumber.toolTip=<html>Este arquivo contain o número the linhas usado para preencher a<b>"{0}"</b> coluna acima</html>
 
-TransactionEditingPreferencesPanel.wizard.title=When I select a predefined description:
-TransactionEditingPreferencesPanel.wizard.ifNull=Fill the amount if it is not null
-TransactionEditingPreferencesPanel.wizard.never=Never fill the amount
-TransactionEditingPreferencesPanel.wizard.always=Always fill the amount
-TransactionEditingPreferencesPanel.wizard.with=with
-TransactionEditingPreferencesPanel.wizard.last=Last value
-TransactionEditingPreferencesPanel.wizard.last.tooltip=Select this option to reuse the amount of last transaction with the selected description 
-TransactionEditingPreferencesPanel.wizard.mostProbable=Most probable amount
-TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Select this option to use the most used amount with the selected description during last months
+TransactionEditingPreferencesPanel.wizard.title=Quando eu selecione uma descrição predefinida:
+TransactionEditingPreferencesPanel.wizard.ifNull=Preencha o valor se este não for nulo (existir)
+TransactionEditingPreferencesPanel.wizard.never=Nunca preencha o valor
+TransactionEditingPreferencesPanel.wizard.always=Sempre preencha o valor
+TransactionEditingPreferencesPanel.wizard.with=com
+TransactionEditingPreferencesPanel.wizard.last=Último valor
+TransactionEditingPreferencesPanel.wizard.last.tooltip=Selecione esta opção para usar novamente o valor da última transação com a descrição selecionada 
+TransactionEditingPreferencesPanel.wizard.mostProbable=Valor mais provável
+TransactionEditingPreferencesPanel.wizard.mostProbable.tooltip=Selecione esta opção para usar o valor mais usado com a descrição selecionada durante o último mês
+
+#-------------------------------------------------------
+# Added or modified since last translation
+
