--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -428,7 +428,6 @@ AccountManager.deleteMessage.one=Der Zahlungsvorgang zu diesem Konto wird ebenfa
 AccountManager.deleteMessage.title=L\u00f6schung eines Kontos mit Zahlungsvorg\u00e4ngen
 AccountManager.title=Konten verwalten
 AccountManager.toolTip=Hier k\u00f6nnen Sie Ihre Konten verwalten
-AccountManager.transactionsNumber.title=Anzahl der Zahlungsvorg\u00e4nge
 #AccountManager.modesNumber.title=Anzahl der Zahlungsweisen
 #AccountManager.checkbooksNumber.title=Anzahl der Scheckb\u00fccher
 AccountManager.alertThresholdLess.title=Warnung, wenn der Kontostand niedriger ist als
@@ -808,6 +807,7 @@ AccountsSummary.tooltip=\u00dcbersicht aller Ihrer Konten
 AccountsSummary.CheckedBalance=G\u00fcltiger Kontostand
 AccountsSummary.CurrentBalance=Aktueller Kontostand
 AccountsSummary.FinalBalance=Finaler Kontostand
+AccountsSummary.TransactionsNumber=Anzahl der Zahlungsvorg\u00e4nge
 #-------- End of AccountsSummaryView --------
 
 #-------- New "important news" screen -------
