--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -432,7 +432,6 @@ AccountManager.deleteMessage.one=La suppression de ce compte implique la suppres
 AccountManager.deleteMessage.title=Suppression d'un compte contenant des opérations
 AccountManager.title=Gestion des comptes
 AccountManager.toolTip=Cet onglet permet de gérer les comptes
-AccountManager.transactionsNumber.title=Nombre d'opérations
 #AccountManager.modesNumber.title=Nombre de modes de paiement
 #AccountManager.checkbooksNumber.title=Nombre de chéquiers
 AccountManager.alertThresholdLess.title=Alerte si le solde est inférieur à
@@ -798,6 +797,7 @@ AccountsSummary.tooltip=Résumé du bilan de l'ensemble des comptes
 AccountsSummary.CheckedBalance=Solde pointé
 AccountsSummary.CurrentBalance=Solde courant
 AccountsSummary.FinalBalance=Solde final
+AccountsSummary.TransactionsNumber=Nombre d'opérations
 #-------- End of AccountsSummaryView --------
 
 #-------- New "important news" screen -------
