--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -5,7 +5,8 @@ known
 
 version	0.17.1 (01/06/2014)
 improvement
-	Le nombre d'opérations par compte est déplacé de l'onglet "Administration/Gestion des comptes" vers l'onglet "Bilan des comptes". Cet onglet affiche à présent le nombre total d'opérations tous comptes confondus. 
+	Le nombre d'opérations par compte est déplacé de l'onglet "Administration/Gestion des comptes" vers l'onglet "Bilan des comptes". Cet onglet affiche à présent le nombre total d'opérations tous comptes confondus.
+	Ajout d'une colonne contenant le nombre d'opérations non pointées dans l'onglet "Bilan des comptes".
 
 version	0.17.0 (01/05/2014)
 improvement
