--- a/Yapbam/src/localization/fr/relnotes.txt
+++ b/Yapbam/src/localization/fr/relnotes.txt
@@ -4,6 +4,10 @@ known
 	Yapbam, lorsqu'il est exécuté par Java 1.6, plante quand on sélectionne un raccourci vers un dossier dans le menu déroulant d'un dialogue de sélection de fichier.<br/>En fait, ce n'est pas un bug de Yapbam, mais un <a href="http://bugs.sun.com/bugdatabase/view_bug.do;jsessionid=518b010bce71d8547e0dfeee596a?bug_id=6550546">bug de java 1.6</a>. La meilleure façon de régler le problème est d'utiliser Java 1.7.
 
 version	0.17.2 (09/06/2014)
+improvement
+	Le compte sélectionné par défaut lors de la création d'une opération tient à présent compte du contexte. Par exemple, lorsqu'on est sur l'onglet "Relevés de compte", et qu'on crée une opération, le compte sélectionné est celui du relevé.
+	Lors de la création d'un nouveau transfert, le compte de destination est à présent pré-sélectionné en fonction de sa probabilité dans l'historique des transferts.
+	Presser la touche "Majuscule" en choisissant un compte dans le menu "Filtre" permet de supprimer le compte du filtre. 
 fix
 	Bug introduit en 0.17.0 : Lors de la première importation d'un fichier, il était possible de lancer l'import sans fixer les correspondances entre les colonnes du fichier importé et les attributs des opérations. L'import se terminait alors par une erreur.
 
