--- a/Yapbam/src/Resources_de.properties
+++ b/Yapbam/src/Resources_de.properties
@@ -886,6 +886,7 @@ Tip.8=<html>Sammelerfassung von Zahlungsvorg\u00e4ngen<hr style\="width\:40%">We
 
 #A new transaction's attribute: a comment
 Transaction.comment=Kommentar
+TransactionDialog.comment=Kommentar:
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Geben Sie einen Kommentar zum Zahlungsvorgang an
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
