--- a/Yapbam/src/Resources_pt.properties
+++ b/Yapbam/src/Resources_pt.properties
@@ -886,6 +886,7 @@ Tip.8=<html>Cria suas transa\u00e7\u00f5es<hr style\="width\:40%">Quando voc\u00
 
 #A new transaction's attribute: a comment
 Transaction.comment=Comment\u00e1rios
+TransactionDialog.comment=Comment\u00e1rios :
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Entre o coment\u00e1rio da transa\u00e7\u00e3o
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
