--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -886,7 +886,7 @@ Tip.8=<html>Saisissez vos op\u00e9rations en masse.<hr style\="width\:40%">Lorsq
 
 #A new transaction's attribute: a comment
 Transaction.comment=Commentaire
-TransactionDialog.comment.tooltip=Commentaire : 
+TransactionDialog.comment=Commentaire : 
 #Field tooltip in the "new transaction" dialog
 TransactionDialog.comment.tooltip=Entrer ici un commentaire sur l'op\u00e9ration
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
